@@ -1,3 +1,12 @@
+2007-11-21  Dan Winship  <danw@gnome.org>
+
+	* libsoup/soup-message-io.c (soup_message_io_cleanup): make this
+	non-static.
+
+	* libsoup/soup-message.c (finalize): Use soup_message_io_cleanup()
+	rather than soup_message_io_stop(), to avoid leaks when finalizing
+	an unfinished message. (Another part of #498509, Wouter Cloetens.)
+
 2007-11-20  Dan Winship  <danw@gnome.org>
 
 	Fix up SOUP_SESSION_ASYNC_CONTEXT. #498509, Wouter Cloetens
